k8s/overlays/stg/storage.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: storage-ingress
  annotations:
    # NOTE: minio console UX works only with trailing slash
    nginx.ingress.kubernetes.io/configuration-snippet: rewrite ^(/oetzit/storage/console)$ $1/ permanent;
spec:
  rules:
    - host: lt-dev.eurac.edu
      http:
        paths:
          - # NOTE: signatures are broken, but we use only public buckets anyways; I also can't be bothered to fix this on nginx side
            path: /oetzit/storage(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  name: api
          - path: /oetzit/storage/console(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  name: console
  tls:
    - hosts:
        - lt-dev.eurac.edu
      secretName: lt-stg-tls
